--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,12 @@
 {
+  "id": "dev.giroto.mandala",
   "name": "Mandala",
   "short_name": "Mandala",
-  "start_url": ".",
+  "start_url": "./mandala.html",
   "display": "standalone",
-  "background_color": "#6d28d9",
+  "theme_color": "#6d28d9",
+  "background_color": "#1c1917",
+  "orientation": "portrait",
   "description": "A mandala generator",
   "icons": [{
     "src": "images/touch/homescreen512.png",
