--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "id": "dev.giroto.mandala",
   "name": "Mandala",
   "short_name": "Mandala",
-  "start_url": "./mandala.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#6d28d9",
   "background_color": "#1c1917",
