--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "short_name": "Mandala",
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#6d28d9",
-  "background_color": "#1c1917",
+  "theme_color": "#4f46e5",
+  "background_color": "#18181B",
   "orientation": "portrait",
   "description": "A mandala generator",
   "icons": [{
